--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"image": "mcr.microsoft.com/devcontainers/universal:2",
+	"image": "mcr.microsoft.com/devcontainers/typescript-node:latest",
 	"features": {
 		"ghcr.io/julialang/devcontainer-features/julia:1": {
 			"channel": "release"
