--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
+# Claude Code settings
 .claude/settings.local.json
+
+# Julia
+*.jl.cov
+*.jl.*.cov
+*.jl.mem
+/Manifest.toml
+/docs/build/
+/docs/site/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor files
+*.swp
+*.swo
+*~
+.vscode/settings.json
