Reduce Julia versions for testing

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        julia-version: ['1.9', '1.10', '1']
+        julia-version: ['1.12', '1.13']
         os: [ubuntu-latest]
         include:
           - os: windows-latest
